--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -2,7 +2,7 @@
 	{{burger_name}}
 
 	<button class="change-devour" data-id="{{id}}" data-devoured="{{devoured}}">
-		{{#if devoured}}DEVOUR{{else}}WAKE UP!{{/if}}
+		{{#if devoured}}DEVOUR{{/if}}
 	</button>
 
 	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
